# gsl-lite

./: .gitattributes  .gitignore  .travis.yml  CHANGES.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt  _config.yml  appveyor.yml  azure-pipelines.yml  conanfile.py  gsl-lite.natvis
_includes/: nav-items.html
_layouts/: home.html
_sass/minima/: custom-variables.scss
assets/css/: style.scss
ci/: azure-pipelines.yml
cmake/: CommonPresets.json  InstallBasicPackageFiles.cmake  PackageConfig.cmake.in  gsl-lite-config.cmake.in
doc/: Features.md  Getting-started.md  Installation and use.md  Installation-and-use.md  Migration-guide.md  Reference.md
example/: 01-basic.cpp  02-array_view.cpp  02-span.cpp  03-gsl-span.cpp  CMakeLists.txt
example/cmake-extern/: CMakeLists.txt
example/cmake-extern/src/: CMakeLists.txt  main.cpp
example/cmake-pkg/: 01-use-gsl-pkg.py  CMakeLists.txt  Readme.md  main.cpp  use-gsl-pkg.py
example/with-CPM/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
example/with-Vcpkg/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
include/: config.h  fail_fast.h  gsl-lite.h  gsl.h  gsl.hpp
include/gsl/: array_view.h  config.h  fail_fast.h  gsl  gsl-lite-vc6.h  gsl-lite-vc6.hpp  gsl-lite.h  gsl-lite.hpp
include/gsl-lite/: gsl-lite.hpp
project/: gsl-lite.cbp  gsl-lite.workspace
script/: create-cov-rpt.py  create-vcpkg.py  install-gsl-pkg.py  update-version.py  upload-conan.py
src/: CMakeLists.txt  gsl-lite.natvis
test/: CMakeLists.txt  MakeTestTarget.cmake  array_view.t.cpp  assert.t.cpp  at.t.cpp  byte.t.cpp  core_check.t.cpp  core_check_lite.t.cpp  emulation.t.cpp  gsl-lite.t.cpp  gsl-lite.t.h  gsl-lite.t.hpp  issue.t.cpp  lest_cpp03.hpp  not_null.t.cpp  owner.t.cpp  span.t.cpp  string_span.t.cpp  string_view.t.cpp  t-all.bat  t.bat  tc-cl.bat  tc.bat  tg-all.bat  tg.bat  util.t.cpp
test/cuda/: CMakeLists.txt  cuda.t.cu
